Disable scissor rectangle during implicit clears in RGB emulation path.

New conformance test being added in
https://github.com/KhronosGroup/WebGL/pull/2542 .

BUG=778770

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I09332c8df9baa651ebfc0d4b6a94bb1f1e308faa
Reviewed-on: https://chromium-review.googlesource.com/765060
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516210}
Former-commit-id: 5e916b7e8faaceb5b7a973299b3ebe63ceeabf5f